Avoid useless recompilation of pagai executable (flex/yacc dependency)
With a more recent version of "FindBISON.cmake", BISON_TARGET
has an option to specify the header file generated, which does not
need to be regenerated if the bison source did not change.

Requires CMake >= 2.8.3 (very old version, all linux distribs have
at least 2.8.7 in their repos).

If one day we require CMake >= 3.4, the file "cmake/FindBISON.cmake"
can be removed from the git.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.3)
 
 project(PAGAI CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 # configuration
 option(STATIC_LINK "Whether to build executables as static" OFF)
