Bugfix for old versions of CMake
Enable download of .xz files
Bugfix in dep_install for old CMakes

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 \#*
 .nfs*
 
+# This file is patched when required (CMake < 3.1.0) but we don't want to version it
+ExternalProject.cmake
+
 doc
 CMakeCache.txt
 CMakeFiles/
