--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 *#
 \#*
 .nfs*
-/Makefile
+
+doc
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
@@ -16,4 +17,4 @@ ex/bin
 ex/res
 src/pagai-debug
 gui
-build/
+build*/
