Use a more recent version of Z3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ DepInstall_add(CONFIG llvm3.4
     LLVM_VERSION 3.4
     CUDD_VERSION 2.5.0
     APRON_VERSION 2016-01-05
-    Z3_VERSION 5a86815f3413bf1acf3dbfa79162888b3be32dc9
+    Z3_VERSION 4.5.0
     PPL_VERSION 1.1
     YICES_VERSION 1.0.40)
 
@@ -75,7 +75,7 @@ DepInstall_add(CONFIG llvm3.6
     LLVM_VERSION 3.6.2
     CUDD_VERSION 2.5.0
     APRON_VERSION 2016-01-05
-    Z3_VERSION 29606b5179f76783ffb0c2ca0ed9d614847064b3
+    Z3_VERSION 4.5.0
     PPL_VERSION 1.1
     YICES_VERSION 1.0.40)
 
@@ -95,6 +95,7 @@ DepInstall_find_package(APRON
     USE_SYSTEM ${USE_SYSTEM_APRON}
     DEFINES APRON_INCLUDE_DIRS APRON_LIBRARIES)
 DepInstall_find_package(Z3 IF_OPT ENABLE_Z3
+    VERSION ${Z3_VERSION}
     USE_SYSTEM ${USE_SYSTEM_Z3}
     DEFINES Z3_INCLUDE_DIRS Z3_LIBRARIES)
 DepInstall_find_package(YICES IF_OPT ENABLE_YICES
