--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ include(cmake/DepInstall.cmake)
 DepInstall_add(CONFIG llvm3.4
     LLVM_VERSION 3.4
     CUDD_VERSION 2.5.0
-    APRON_VERSION 2016-01-05
+    APRON_VERSION 0.9.11
     Z3_VERSION 4.5.0
     PPL_VERSION 1.1
     YICES_VERSION 1.0.40)
@@ -74,7 +74,7 @@ DepInstall_add(CONFIG llvm3.4
 DepInstall_add(CONFIG llvm3.6
     LLVM_VERSION 3.6.2
     CUDD_VERSION 2.5.0
-    APRON_VERSION 2016-01-05
+    APRON_VERSION 0.9.11
     Z3_VERSION 4.5.0
     PPL_VERSION 1.1
     YICES_VERSION 1.0.40)
@@ -92,6 +92,7 @@ DepInstall_find_package(LLVM
     USE_SYSTEM ${USE_SYSTEM_LLVM}
     DEFINES LLVM_CXX_FLAGS LLVM_LD_FLAGS LLVM_LIBRARIES)
 DepInstall_find_package(APRON
+    VERSION ${APRON_VERSION}
     USE_SYSTEM ${USE_SYSTEM_APRON}
     DEFINES APRON_INCLUDE_DIRS APRON_LIBRARIES)
 DepInstall_find_package(Z3 IF_OPT ENABLE_Z3
