Remove the need for -DLLVM_INSTALL_PATH flag
The LLVM prefix is already available with "llvm-config.h",
thus we do not need to handle an extra option for that.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ DepInstall_find_package(CUDD
 DepInstall_find_package(LLVM
     VERSION ${LLVM_VERSION}
     USE_SYSTEM ${USE_SYSTEM_LLVM}
-    DEFINES LLVM_PATH LLVM_CXX_FLAGS LLVM_LD_FLAGS LLVM_LIBRARIES)
+    DEFINES LLVM_CXX_FLAGS LLVM_LD_FLAGS LLVM_LIBRARIES)
 DepInstall_find_package(APRON
     USE_SYSTEM ${USE_SYSTEM_APRON}
     DEFINES APRON_INCLUDE_DIRS APRON_LIBRARIES)
@@ -137,7 +137,6 @@ add_executable(pagai
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LLVM_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LLVM_LD_FLAGS}")
-add_definitions(-DLLVM_INSTALL_PATH="${LLVM_PATH}")
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/src # to compile flex/yacc files
