Fix warnings (Wall, Wextra, pedantic)
Exclude warnings from 3rd party libraries (LLVM, apron, etc),
with "begin_3rdparty.h" and "end_3rdparty.h".

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -7,7 +7,9 @@
 #ifndef CONFIG_UTIL_PAGAI_H
 #define CONFIG_UTIL_PAGAI_H
 
+#include "begin_3rdparty.h"
 #include "llvm/Config/llvm-config.h"
+#include "end_3rdparty.h"
 
 // Ensure LLVM_VERSION is at least <maj>.<min>
 #define LLVM_VERSION_ATLEAST(maj, min) (LLVM_VERSION_MAJOR > (maj) || (LLVM_VERSION_MAJOR == (maj) && LLVM_VERSION_MINOR >= (min)))
