Add CMake targets for code coverage (with lcov)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(PAGAI_VERSION ${PAGAI_VERSION_MAJOR}.${PAGAI_VERSION_MINOR}.${PAGAI_VERSION_
 
 option(ENABLE_PROFILING "Whether to build using -pg" OFF)
 option(ENABLE_DEBUGGING "Whether to build using -g" OFF)
+option(ENABLE_COVERAGE "Whether to enable coverage tests (gcc only)" OFF)
 option(ENABLE_YICES "Whether to enable Yices" ON)
 option(ENABLE_Z3 "Whether to enable Z3 through api" ON)
 option(ENABLE_PPL "Whether APRON has been compiled with PPL (otherwise uses NewPolka)" OFF)
@@ -162,6 +163,26 @@ include(cmake/MakeConfigFile.cmake)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LLVM_CXX_FLAGS} -Wall -Wextra -pedantic")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LLVM_LD_FLAGS}")
+if(ENABLE_COVERAGE)
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+        find_program(LCOV_EXE lcov)
+        find_program(GENHTML_EXE genhtml)
+
+        if(LCOV_EXE AND GENHTML_EXE)
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -W -Wshadow -Wunused-variable -Wunused-parameter -Wunused-function -Wunused -Wno-system-headers -Wno-deprecated -Woverloaded-virtual -Wwrite-strings --coverage")
+            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
+
+            add_custom_target(coverage_capture ${LCOV_EXE} --capture --directory ${CMAKE_BINARY_DIR} --output-file coverage_all.info)
+            add_custom_target(coverage_extract ${LCOV_EXE} --extract coverage_all.info "*/pagai/src/*" --output-file coverage_pagai_src.info DEPENDS coverage_capture)
+            add_custom_target(coverage ${GENHTML_EXE} coverage_pagai_src.info --output-directory coverage DEPENDS coverage_extract)
+        else()
+            message(WARNING "lcov or genhtml could not have been found (lcov is probably not installed) "
+                            "thus coverage tests are not supported")
+        endif()
+    else()
+        message(WARNING "Compiler is not GNU (g++) thus coverage tests are not supported")
+    endif()
+endif()
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/src # to compile flex/yacc files
