--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *#
 \#*
 .nfs*
+.vimrc
 
 # This file is patched when required (CMake < 3.1.0) but we don't want to version it
 ExternalProject.cmake
